   help prevent fat fingers and what not and to create more readable code. Still more to
   do, especialy in Quantity(), but I got most of them.
- Fixed bug with Salt check boxes not adding/removeing salt from recipe (addActionListner())
- Fixed water calc bug where app was telling user to add salts when they already had the target
   value or higher.

Dec 27, 2007 - Jim Clark
- Save/load/export added for water profile and salts
- A few bugs with implementation of water treatment cleaned up
- A bug with notes display in xlst fixed 
- Default Water profile in options and prefs dialog
- TODO: allow user to add water profiles without having to manual edit DB files

Dec 25, 2007 - Jim Clark
- Basic structure for Water Treatment and Brewing Salts
  - GUI started
  - Water and salt database implemented
  - Water and salts added to Recipe
  - Basic salt calulations
  - TODO: acid calcs/gui, save/load into xml, xlst printing, options

Dec 20, 2007 - Jim Clark
- Added keg line length to carb panel and options
- Added conversion tool dialog for pressure, temp, gravity, volume and weight

Dec 19, 2007 - Jim Clark
- Properties for carb panel implemented
- Export to html for carb implemented
- Quantity.Converter and ilk now static so a nre Quanity object doesn't need to be instantiated to 
   convert a weight or volume

Dec 18, 2007 - Jim Clark
- Completed functionality of carbonation panel, still doesn't have selectable default settings in
   options dialog.
- Rolled back useing malts.csv and added a new prime_sugar.csv, which is used.

Dec 14, 2007 - Jim Clark
- Completed fermentation schedual functionality (save and xml->html export)
- Revamped xlst to include all data on sheet. Much nicer output now, usable for a brewday sheet.
- Fixed note display and UI panel
- Moved some string lists into their prespective 'home' classes (mash types in Mash for example)
- Added a field to malts.csv to determine if the malt/adjuct is suitable for use as a primeing sugar